--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,6 +3,7 @@
 
   <p>
     <mat-form-field appearance="fill">
+      <mat-label>Email</mat-label>
       <input type="email" name="email" matInput ngModel required />
       <mat-icon matSuffix>email</mat-icon>
     </mat-form-field>
@@ -10,6 +11,7 @@
 
   <p>
     <mat-form-field appearance="fill">
+      <mat-label>Senha</mat-label>
       <input type="password" name="password" matInput ngModel required />
       <mat-icon matSuffix>lock</mat-icon>
     </mat-form-field>
