--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -16,7 +16,7 @@
   </p>
 
   <p>
-    <mat-form-field class="full-width" appearance="fill">
+    <mat-form-field appearance="fill">
       <mat-label>Data de nascimento</mat-label>
       <input
         matInput
