Criação Descrição Detalhes Filmes e Tvs

--- a/src/app/core/components/not-found/not-found.component.scss
+++ b/src/app/core/components/not-found/not-found.component.scss
@@ -1,16 +1,115 @@
-div{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 
-  height: calc(100% - 56px);
 
-  .not-found {
-    color: red;
-    font-weight: 600;
-    font-size: 95px;
-    margin-bottom: 30px;
-    animation: not-found-animation 2s infinite;
-  }
-}
+// div{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: column;
+
+//   height: calc(100% - 56px);
+
+//   .not-found {
+//     color: red;
+//     font-weight: 600;
+//     font-size: 95px;
+//     margin-bottom: 30px;
+//     animation: not-found-animation 2s infinite;
+//   }
+// }
+
+// @keyframes not-found-animation {
+//   from {
+//     transform: rotateY(0deg) rotateX(0deg);
+//   }
+
+//   to {
+//     transform: rotateY(360deg) rotateX(10deg);
+//   }
+// }
+
+
+
+// body {
+//   background-color: #2F3242;
+// }
+// svg {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   margin-top: -250px;
+//   margin-left: -400px;
+// }
+// .message-box {
+//   height: 200px;
+//   width: 380px;
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   margin-top: -100px;
+//   margin-left: 50px;
+//   color: #FFF;
+//   font-family: Roboto;
+//   font-weight: 300;
+// }
+// .message-box h1 {
+//   font-size: 60px;
+//   line-height: 46px;
+//   margin-bottom: 40px;
+// }
+// .buttons-con .action-link-wrap {
+//   margin-top: 40px;
+// }
+// .buttons-con .action-link-wrap a {
+//   background: red;
+//   padding: 8px 25px;
+//   border-radius: 4px;
+//   color: #FFF;
+//   font-weight: bold;
+//   font-size: 14px;
+//   transition: all 0.3s linear;
+//   cursor: pointer;
+//   text-decoration: none;
+//   margin-right: 10px
+// }
+// .buttons-con .action-link-wrap a:hover {
+//   background: #5A5C6C;
+//   color: #fff;
+// }
+
+// #Polygon-1 , #Polygon-2 , #Polygon-3 , #Polygon-4 , #Polygon-4, #Polygon-5 {
+//   animation: float 1s infinite ease-in-out alternate;
+// }
+// #Polygon-2 {
+//   animation-delay: .2s;
+// }
+// #Polygon-3 {
+//   animation-delay: .4s;
+// }
+// #Polygon-4 {
+//   animation-delay: .6s;
+// }
+// #Polygon-5 {
+//   animation-delay: .8s;
+// }
+
+// @keyframes float {
+// 	100% {
+//     transform: translateY(20px);
+//   }
+// }
+// @media (max-width: 450px) {
+//   svg {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     margin-top: -250px;
+//     margin-left: -190px;
+//   }
+//   .message-box {
+//     top: 50%;
+//     left: 50%;
+//     margin-top: -100px;
+//     margin-left: -190px;
+//     text-align: center;
+//   }
+// }
